--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
           gcloud run deploy "$SERVICE_NAME" \
             --image "$IMAGE" \
             --region "$REGION" \
-            --service-account "storage@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com" \
+            --service-account storage@pi-projeto-integrador-468922.iam.gserviceaccount.com \
             --allow-unauthenticated \
             --set-env-vars PLANILHA_PATH="${{ secrets.PLANILHA_PATH }}" \
             --cpu=1 --memory=512Mi --timeout=300 \
